# blog

./: .gitignore  LICENSE  about.rst  blog.cabal  contact.markdown  publish.sh  run-stack.sh  site.hs  stack.yaml
app/: Main.hs
app/Blog/: Directory.hs  Svg.hs
app/Blog/Data/Json/: StateMachine.hs
app/Blog/Diagrams/: All.hs
app/Blog/Diagrams/Json/: StateRailroad.hs  StateTransition.hs
app/Blog/Doc/: Frame.hs
app/Blog/Doc/Json/: Slides.hs  StateMachine.hs  StateTransitionDiagram.hs  Text.hs
css/: default.css  syntax-c.css  syntax-haskell-bash.css  syntax-haskell-monokai.css  syntax-json.css  syntax-text.css  syntax.css
drafts/: 2018-07-26-draft-post.markdown  2018-07-26-draft-post.md  2018-08-01-draft-balanced-parens.md  2018-08-08-draft-creating-rank-select-bit-string-for-csv.markdown  2018-08-08-draft-creating-rank-select-bit-string-for-csv.md  2018-08-08-draft-post.md  2018-08-08-handling-csv-escaping.md  2018-09-19-rechunking-lazy-bytestrings.md  2018-09-30-draft-lazier-cursor.md  2019-02-04-adding-bit-vectors-branchless-comparisons.md  2019-02-04-adding-bit-vectors-building-vectors-with-state.md  2019-02-04-adding-bit-vectors.md  2019-02-18-math.md  2019-03-13-json-parsing.md
posts/: 2018-07-24-problem-of-parsing-large-datasets.markdown  2018-07-25-problem-of-parsing-large-datasets.markdown  2018-08-01-introduction-to-rank-select-bit-string.md  2018-08-08-data-parallel-rank-select-bit-string-construction.md  2018-08-15-data-parallel-rfc-compliant-csv-parsing.md  2018-08-22-pdep-and-pext-bit-manipulation-functions.md  2018-09-03-simd-with-linecount.md  2018-09-21-rechunking-lazy-bytestrings.md  2019-02-22-adding-bit-vectors-branchless-comparisons.md
resources/: lazier-cursor-benchmarks.xlsx
site/: Main.hs
templates/: default.html  post-list.html  post.html
