cabal-version:      2.2

name:               blog
version:            0.1.0.0
build-type:         Simple

common base                   { build-depends: base                   >= 4          && < 5        }

common JuicyPixels            { build-depends: JuicyPixels            >= 3          && < 4        }
common diagrams               { build-depends: diagrams               >= 1.4        && < 1.5      }
common diagrams-contrib       { build-depends: diagrams-contrib                                   }
common diagrams-core          { build-depends: diagrams-core                                      }
common diagrams-lib           { build-depends: diagrams-lib                                       }
common diagrams-svg           { build-depends: diagrams-svg                                       }
common directory              { build-depends: directory                                          }
common generic-lens           { build-depends: generic-lens                                       }
common hakyll                 { build-depends: hakyll                 >= 4.12       && < 4.13     }
common latex-formulae-hakyll  { build-depends: latex-formulae-hakyll  >= 0.2        && < 0.3      }
common latex-formulae-image   { build-depends: latex-formulae-image   >= 0.1        && < 0.2      }
common latex-formulae-pandoc  { build-depends: latex-formulae-pandoc  >= 0.2        && < 0.3      }
common pandoc                 { build-depends: pandoc                 >= 2.2        && < 2.3      }
common split                  { build-depends: split                                              }
common SVGFonts               { build-depends: SVGFonts               >= 1.7        && < 1.9      }

executable svgs
  import:   base
          , JuicyPixels
          , diagrams
          , diagrams-contrib
          , diagrams-core
          , diagrams-lib
          , diagrams-svg
          , directory
          , generic-lens
          , split
          , SVGFonts
  main-is:            Main.hs
  hs-source-dirs:     app
  other-modules:      Blog.Data.Json.StateMachine
                    , Blog.Diagrams.All
                    , Blog.Diagrams.Json.StateRailroad
                    , Blog.Diagrams.Json.StateTransition
                    , Blog.Directory
                    , Blog.Doc.Frame
                    , Blog.Doc.Json.Text
                    , Blog.Svg
  ghc-options:        -threaded -O0
  default-language:   Haskell2010

executable site
  import:   base
          , JuicyPixels
          , diagrams
          , diagrams-contrib
          , diagrams-core
          , diagrams-lib
          , diagrams-svg
          , directory
          , generic-lens
          , hakyll
          , latex-formulae-hakyll
          , latex-formulae-image
          , latex-formulae-pandoc
          , pandoc
          , split
          , SVGFonts
  main-is:            Main.hs
  hs-source-dirs:     site
  ghc-options:        -threaded
  default-language:   Haskell2010
